# provenlex-public

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CSSF_MAPPING.md  DEPLOY.md  Dockerfile  Dockerfile.zk-worker  GENESIS_SWARM_WHITEPAPER.md  INVESTORS.md  LAUNCH_LINKEDIN.md  LAUNCH_LOOM_SCRIPT.md  LICENSE  MIRROR_INGEST_SEED.md  PRESS_OUTREACH.md  README.md  RULESET.md  SECURITY.md  SUPABASE_SETUP.md  TEST_PROOF.md  app.py  docker-compose.pbft.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  jarvis-ui-ci.yml  mutation.yml  pbft-benchmark.yml
docker/: Dockerfile  prometheus.yml
docs/: index.html  pitch-deck.html
docs/postmortems/: 2024-04-except-pass-era.md  README.md
jarvis-ui/: .gitignore  Dockerfile  middleware.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
jarvis-ui/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
jarvis-ui/app/about/: page.tsx
jarvis-ui/app/aifmd/: page.tsx
jarvis-ui/app/almanac/: page.tsx
jarvis-ui/app/analyze/: page.tsx
jarvis-ui/app/anchor/: AnchorClient.tsx  page.tsx
jarvis-ui/app/architecture/: LoopConsole.tsx  page.tsx
jarvis-ui/app/audit/: page.tsx
jarvis-ui/app/audit-sim/: page.tsx
jarvis-ui/app/board-report/: page.tsx
jarvis-ui/app/book/: page.tsx
jarvis-ui/app/bounty/: page.tsx
jarvis-ui/app/case-studies/: page.tsx
jarvis-ui/app/certificate/: page.tsx
jarvis-ui/app/chat/: page.tsx
jarvis-ui/app/cheatsheet/: page.tsx
jarvis-ui/app/claim/: ClaimForm.tsx  page.tsx
jarvis-ui/app/clearing/: ClearingConsole.tsx  page.tsx
jarvis-ui/app/coalition/: page.tsx
jarvis-ui/app/codex/: CodexConsole.tsx  CodexWaitlist.tsx  page.tsx
jarvis-ui/app/compliance/: page.tsx
jarvis-ui/app/consensus/: page.tsx
jarvis-ui/app/court/: page.tsx
jarvis-ui/app/daily/: page.tsx
jarvis-ui/app/dashboard/: page.tsx
jarvis-ui/app/deck/: page.tsx
jarvis-ui/app/demo/: page.tsx
jarvis-ui/app/deterministic/: page.tsx
jarvis-ui/app/doc-check/: page.tsx
jarvis-ui/app/docs/: page.tsx
jarvis-ui/app/doctrine/: page.tsx
jarvis-ui/app/dora/: page.tsx
jarvis-ui/app/dpa/: page.tsx
jarvis-ui/app/embed-docs/: page.tsx
jarvis-ui/app/etf/: page.tsx
jarvis-ui/app/everything/: page.tsx
jarvis-ui/app/extension/: page.tsx
jarvis-ui/app/eye/: page.tsx
jarvis-ui/components/: A11yAlertFeed.tsx  AlertToast.tsx  BoardroomMode.tsx  BotCard.tsx  BotCardPremium.tsx  CaseManagement.tsx  CommandPalette.tsx  CommandStrip.tsx  ComplianceDisclaimer.tsx  ConsensusRing.tsx  ConsensusRing2.tsx  CosmicBackground.tsx  DetectionSpeedPanel.tsx  EntityGlobe.tsx  EntryInteractive.tsx  ExplainabilityModal.tsx  HeroCounter.tsx  InvestorProofPanel.tsx  JarvisChat.tsx  LegalDisclaimer.tsx  LiveEventTicker.tsx  LiveIntelligence.tsx  MerkleHUD.tsx  MerkleViewer.tsx  NetworkGraph.tsx  NodeGraph.tsx  PrecedentDrillDown.tsx  PrecrimeMeter.tsx  PwaRegister.tsx  RegulatoryPanel.tsx  RevealObserver.tsx  SanctionsPanel.tsx  ScanVerdict.tsx  ShadowBotCard.tsx  SwarmConsensus3D.tsx  SwarmOperations3D.tsx  ThreatGlobe.tsx  ThreatMap.tsx  ThreatRadar.tsx  TickerBar.tsx  (+4 more)
jarvis-ui/lib/: anthropic.ts  api-guard.ts  api.ts  apiHandler.ts  apikeys.ts  audit-pdf.ts  auth.ts  benchmark.ts  book-snapshot.ts  book.ts  clearing-engines.ts  counterparties.ts  cron.ts  daily.ts  email.ts  explainability.ts  groqClient.ts  kv.ts  lux-citations.ts  lux-engines.ts  merkle.ts  monitor.ts  obituaries.ts  opentimestamps.ts  predictions.ts  prospectus-ingest.ts  prospectus-real.ts  prospectus.ts  ratelimit.ts  regulator-feeds.ts  replay.ts  scan-engine.ts  sentinel.ts  shadow.ts  signing.ts  stripe.ts  supabase-browser.ts  supabase-middleware.ts  supabase.ts  timemachine.ts  (+7 more)
jarvis-ui/public/: manifest.json  sw.js
jarvis-ui/src/: env.ts  middleware.ts
jarvis-ui/tests/: clearing-engines.test.ts  counterparties.test.ts  eval-corpus.test.ts  explainability.test.ts  lux-engines.test.ts  pillars.test.ts  prospectus.test.ts  scan-engine.test.ts  watchlist.test.ts
k8s/: api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pbft-statefulset.yaml  pod-disruption-budget.yaml  redis-cluster-ha.yaml  redis-cluster.yaml  redis-deployment.yaml  secrets.yaml
loadtest/: locustfile.py  requirements.txt
migrations/: env.py
migrations/versions/: 0001_initial_cases_schema.py  0002_add_alert_feedback_table.py
monitoring/: prometheus.yml
monitoring/rules/: genesis_alerts.yml
proto/: pbft.proto
scripts/: benchmark_detection.py  check_mutation_rate.py  gen_pbft_certs.py  pbft_benchmark.py  self_healing_demo.py  verify-and-launch.sh
sovereign-engine/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  genesis_mesh.cfg  genesis_mesh.tla  pyproject.toml
sovereign-engine/benches/: hot_path_bench.rs  swarm_perf.rs  zk_verify_bench.rs
sovereign-engine/noir/: Nargo.toml
sovereign-engine/src/: lib.rs  main.rs  portfolio_circuit.nr  zk_circuit.nr  zk_worker.rs
spec/: PBFT.tla  README.md
supabase/migrations/: 20260530180000_initial_schema.sql  20260531090000_prospectus.sql  20260531120000_harden_rls.sql  20260531130000_regulator_items_and_cron.sql
tests/: test_api_contracts.py  test_binary_determinism.py  test_bots.py  test_consensus.py  test_shared_infrastructure.py
tests/benchmarks/: test_ml_backtest.py  test_pbft_fault_benchmark.py  test_pbft_latency.py  test_shap_benchmark.py
tests/chaos/: test_pbft_fault_injection.py
tests/consensus/: test_immutable_ledger.py  test_pbft_chaos.py  test_pbft_mesh.py
tests/evals/: compliance_eval.yaml  test_compliance_eval.py
tests/integration/: test_live_apis.py  test_zk_prover_e2e.py
tests/property/: test_pbft_hypothesis.py
tests/unit/: test_audit_chain_core.py  test_document_review.py  test_grok_provider.py  test_immutable_ledger_extended.py  test_metrics_engine.py  test_zk_client.py
(+356 files in other folders)
