[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-swarm"
version = "0.5.0"
description = "10-bot autonomous RegTech swarm + 1 adversarial sidecar for Luxembourg hedge funds"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "certifi>=2024.0",
    "yfinance>=0.2",
    "cryptography>=42.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
    "prometheus-client>=0.20",
    "joblib>=1.3.0",
    "websockets>=12.0",
    "structlog>=24.0",
    "redis>=5.0",
    "authlib>=1.3",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "rank-bm25>=0.2.2",
    "pypdf>=4.0",
    "slowapi>=0.1.9",
    "langdetect>=1.0.9",
    "defusedxml>=0.7",
    "groq>=0.4.0",
    "anthropic>=0.47",
    "sentry-sdk[fastapi]>=2.0",
    "arq>=0.25",
    "sqlalchemy>=2.0",
    "psutil>=5.9",
    "RestrictedPython>=7.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
torch      = ["torch>=2.2"]
nats       = ["nats-py>=2.6"]
otel       = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-exporter-prometheus>=0.45b0",
]
grpc       = ["grpcio>=1.63", "grpcio-tools>=1.63"]
blockchain = ["web3>=6.0"]
parquet    = ["pyarrow>=15.0"]
shap       = ["shap>=0.45"]
embeddings = ["sentence-transformers>=3.0"]
wireguard  = ["wgconfig>=0.22"]
aws        = ["boto3>=1.34"]
vectordb   = ["qdrant-client>=1.9"]
sandbox    = ["docker>=7.0"]
sovereign  = ["genesis-swarm[embeddings,wireguard,aws]"]
full       = ["genesis-swarm[torch,nats,otel,parquet,shap,sovereign,vectordb,sandbox]"]
dev        = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis>=4.6",
    "types-passlib>=1.7",
    "types-aiofiles>=23.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "bandit[toml]>=1.7",
    "safety>=3.0",
    "pip-audit>=2.7",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "anyio[asyncio]>=4.0",
    "pre-commit>=3.8",
]

[project.scripts]
genesis-swarm = "genesis_swarm.main:cli"
genesis-worker = "arq:cli"

[tool.setuptools.packages.find]
where = ["src"]

# ── Pytest ─────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--tb=short -q"
markers      = ["slow: marks tests as slow (deselect with -m 'not slow')"]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source  = ["genesis_swarm"]
omit    = ["*/tests/*", "*/migrations/*"]
branch  = true

[tool.coverage.report]
fail_under   = 19
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
# Full rule catalogue — every selector that Ruff ships is listed explicitly so
# new Ruff releases do not silently activate rules.  Comment-disable any rule
# that is too noisy for this codebase instead of removing the selector.
select = [
    "E", "W",    # pycodestyle — style errors and warnings
    "F",         # pyflakes — undefined names, unused imports
    "I",         # isort — import order
    "B",         # flake8-bugbear — likely bugs and design issues
    "B9",        # bugbear opinionated (string formatting, etc.)
    "C4",        # flake8-comprehensions — redundant comprehensions
    "C90",       # McCabe complexity
    "UP",        # pyupgrade — modernise Python syntax
    "SIM",       # flake8-simplify — unnecessary constructs
    "TID",       # flake8-tidy-imports — ban relative imports beyond one level
    "RUF",       # ruff-specific — fast-path rules not covered elsewhere
    "ASYNC",     # flake8-async — asyncio anti-patterns
    "PTH",       # flake8-use-pathlib — os.path → pathlib
    "S",         # flake8-bandit — OWASP / CWE security patterns
    "N",         # pep8-naming — class, function, variable naming
    "PERF",      # perflint — performance anti-patterns
    "T20",       # flake8-print — ban stray print() calls in src
    "G",         # flake8-logging-format — lazy % formatting in log calls
    "DTZ",       # flake8-datetimez — timezone-aware datetimes
    "PIE",       # flake8-pie — misc lint improvements
    "PT",        # flake8-pytest-style — pytest best-practice
    "Q",         # flake8-quotes — consistent quote style
    "RET",       # flake8-return — return statement style
    "TCH",       # flake8-type-checking — move pure-annotation imports to TYPE_CHECKING
    "ERA",       # eradicate — detect commented-out code
    "PL",        # pylint — errors, warnings, conventions, refactor
    "TRY",       # tryceratops — exception handling hygiene
    "FLY",       # flynt — f-string over str.format() / %
    "RSE",       # flake8-raise — unnecessary raise from None / bare raise
    "SLF",       # flake8-self — private member access outside class
    "ARG",       # flake8-unused-arguments
    "FBT",       # flake8-boolean-trap — positional boolean parameters
    "ISC",       # flake8-implicit-str-concat
    "ICN",       # flake8-import-conventions — canonical aliases (np, pd, etc.)
    "YTT",       # flake8-2020 — Python 2 / 3 compatibility remnants
    "ANN",       # flake8-annotations — enforce type annotations
    "LOG",       # flake8-logging — logging call hygiene
]

ignore = [
    # ── FastAPI / Pydantic patterns ────────────────────────────────────────
    "B008",      # function calls in default arguments (FastAPI Depends())
    "FBT001",    # boolean positional arg in function definition (Pydantic fields)
    "FBT002",    # boolean default in function definition (Pydantic fields)

    # ── Type annotation ergonomics ─────────────────────────────────────────
    "UP007",     # use X | Y for union types — some stdlib stubs need Optional
    "ANN101",    # missing type for `self`
    "ANN102",    # missing type for `cls`
    "ANN204",    # missing return type for __init__ / __post_init__ (always None)
    "ANN401",    # Dynamically typed expressions (Any) — unavoidable in generic code

    # ── Logging ───────────────────────────────────────────────────────────
    "G004",      # f-string in logging — accepted pattern for one-off log calls

    # ── Code style preferences ─────────────────────────────────────────────
    "SIM117",    # combine nested with-statements — readability preference
    "TRY003",    # long messages outside exception class — acceptable for clarity
    "TRY301",    # abstract raise to inner function — over-engineering for small fns
    "EM101",     # exception must not use a string literal — overly pedantic
    "EM102",     # exception must not use f-string — overly pedantic
    "ERA001",    # commented-out code — legitimate in consensus protocol for docs

    # ── Complexity thresholds ──────────────────────────────────────────────
    "C901",      # McCabe complexity > 10 — PBFT state machine is legitimately deep
    "PLR0912",   # too many branches — ditto
    "PLR0913",   # too many arguments — dataclass factories need many params
    "PLR0915",   # too many statements — ditto

    # ── Test-only relaxations (applied via per-file ignores below) ─────────
    # S101, S311, ARG001, ANN, PT — see [tool.ruff.lint.per-file-ignores]
]

# McCabe complexity ceiling; functions that exceed this must be refactored or
# carry an explicit # noqa: C901 with a justification comment.
[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.ruff.lint.isort]
known-first-party        = ["genesis_swarm"]
split-on-trailing-comma  = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"   # ban ../foo imports; allow ./foo within package

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.ruff.lint.pylint]
max-args     = 10
max-branches = 14
max-returns  = 8
max-statements = 55

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any         = true   # *args: Any is fine in generic decorators
suppress-none-returning    = true   # no annotation needed when return is always None
mypy-init-return           = true   # __init__ return type inferred

[tool.ruff.lint.per-file-ignores]
# Test files are allowed to use assert, random generators, and skip annotations
"tests/**/*.py" = [
    "S101",    # assert is the primary testing mechanism
    "S311",    # random generators acceptable in chaos tests
    "S105",    # hardcoded passwords in test fixtures
    "S106",    # ditto
    "ANN",     # annotation enforcement relaxed in tests
    "ARG001",  # unused function argument — common in pytest fixtures
    "ARG002",  # ditto for methods
    "PT011",   # pytest.raises(Exception) without match= — acceptable in integration tests
    "SLF001",  # private member access — tests must inspect internals
    "T201",    # print() — allowed in test helpers for debugging output
    "PLR2004", # magic value comparisons — assert node_count == 11 is readable
    "FBT003",  # boolean positional in function call — parametrize tuples
]

# Migration files are autogenerated; relax style rules
"*/migrations/*.py" = ["ALL"]
"*/migrations/versions/*.py" = ["ALL"]

# gRPC / proto generated files
"*/grpc/*.py" = ["ALL"]
"*/consensus/generate_grpc.py" = ["ALL", "S603", "S607"]

# CLI entry point uses print for user-facing output
"src/genesis_swarm/main.py" = ["T201"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false
line-ending              = "lf"
docstring-code-format    = true
docstring-code-line-length = 88

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version            = "3.11"
strict                    = true
warn_return_any           = true
warn_unused_ignores       = true
warn_unused_configs       = true
warn_redundant_casts      = true
disallow_any_generics     = true
disallow_subclassing_any  = true
disallow_untyped_calls    = true
disallow_untyped_defs     = true
disallow_incomplete_defs  = true
check_untyped_defs        = true
disallow_untyped_decorators = true
no_implicit_optional      = true
no_implicit_reexport      = true
strict_equality           = true
extra_checks              = true
show_error_codes          = true
show_column_numbers       = true
pretty                    = true
error_summary             = false   # suppress N-errors footer; per-file output is enough

# Plugins
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Third-party libraries without stubs — suppress only the missing-import error,
# not type errors in our own code that calls these libraries.
[[tool.mypy.overrides]]
module = [
    "structlog.*",
    "tenacity.*",
    "RestrictedPython.*",
    "sentence_transformers.*",
    "wgconfig.*",
    "boto3.*",
    "botocore.*",
    "redis.*",
    "aiosqlite.*",
    "authlib.*",
    "jose.*",
    "passlib.*",
    "reportlab.*",
    "prometheus_client.*",
    "chromadb.*",
    "grpc.*",
    "grpc.aio.*",
    "qdrant_client.*",
    "docker.*",
    "yfinance.*",
    "joblib.*",
    "sklearn.*",
    "numpy.*",
    "pandas.*",
]
ignore_missing_imports = true

# Test files: relax strict generics enforcement (pytest fixtures use Any implicitly)
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_any_generics    = false
disallow_subclassing_any = false
warn_return_any          = false

# ── Bandit ────────────────────────────────────────────────────────────────────

[tool.bandit]
targets   = ["src"]
recursive = true

# Severity × confidence matrix:
#   MEDIUM/MEDIUM and above blocks the commit.
#   LOW/* are informational — reported but do not fail.
severity  = "medium"
confidence = "medium"

# Rules skipped with documented justification:
skips = [
    "B101",  # assert_used — asserts are fine in non-optimised production Python
    "B311",  # random — standard PRNG used only in chaos-test latency jitter, not secrets
    "B404",  # import_subprocess — used in generate_grpc.py build tooling only
    "B603",  # subprocess_without_shell_equals_true — controlled invocation in generate_grpc.py
    "B607",  # start_process_with_partial_path — ditto, protoc path from PATH
]

# ── pip-audit ─────────────────────────────────────────────────────────────────

[tool.pip-audit]
vulnerability-service = "osv"
format                = "columns"

# ── Maturin (genesis_native PyO3 extension) ────────────────────────────────────
# The native extension has its own pyproject.toml in sovereign-engine/.
# Build: cd sovereign-engine && maturin develop --features pyo3
# This installs genesis_native as a separate package (genesis-native) with no
# naming conflict against the genesis-swarm Python package.
